--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap",
   "description": "The most popular front-end framework for developing responsive, mobile first projects on the web.",
-  "version": "3.3.4",
+  "version": "v3.3.4-hphodt",
   "keywords": [
     "css",
     "js",
